--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [1.20]
+        go-version: [1.23.2]
         os: [ubuntu-latest]
 
     steps:
@@ -28,6 +28,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
+          cache: 'mod'
+          
+      - name: Verificar versão do Go
+        run: go version
 
       - name: Baixar dependências
         run: go mod tidy
