--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Baixar dependências
         run: go mod tidy
 
+      - name: ls da pasta
+        run: ls
+
       - name: Build da aplicação
         run: go build -v src/apps/main.go
 
