--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         run: ls
 
       - name: Build da aplicação
-        run: go build -v src/apps/main.go
+        run: go build -v src/apps
 
       - name: Gerar Tag
         id: generate_tag
