--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,10 @@ jobs:
         run: ls
 
       - name: Build da aplicação
-        run: go build -o todo_app ./src/apps
+        run: go build ./...
+
+      - name: Run Tests
+        run: go test ./...
 
       - name: Gerar Tag
         id: generate_tag
