--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,3 +49,16 @@ jobs:
         run: |
           SHA=$(echo $GITHUB_SHA | head -c7)
           echo "sha=$SHA" >> $GITHUB_OUTPUT
+
+
+      - name: Login no Container Registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build da imagem Docker
+        run: docker build -t mcsl9/projeto-docker:${{ steps.generate_tag.outputs.sha }} .
+
+      - name: Push da imagem Docker para o DockerHub
+        run: docker push mcsl9/projeto-docker:${{ steps.generate_tag.outputs.sha }}
